# special-song-search

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  data_analysis.ipynb  pyproject.toml  requirements.txt  sample.db  setup.cfg
src/special-song-search/: data.py  musicb.py
src/special_song_search/: __init__.py  database.py  models.py  musicb.py  recommend.py
