[metadata]
name = special_song_search
description = tbd
author = Juan Manuel Lazaro Ruiz
license = MIT
license_files = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = special_song_search
install_requires =
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.3.1

[flake8]
max-line-length = 80
